Add Google and Facebook External Login

--- a/ImpeCustomers/Web.config
+++ b/ImpeCustomers/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ImpeCustomers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ImpeCustomers-20170314083838.mdf;Initial Catalog=aspnet-ImpeCustomers-20170314083838;Integrated Security=True"
@@ -94,4 +97,20 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <applicationSettings>
+    <ImpeCustomers.Properties.Settings>
+      <setting name="GoogleClientId" serializeAs="String">
+        <value>1013865157606-ajlfbeo7clmhmjjbgeub9cltd2qsl2pd.apps.googleusercontent.com</value>
+      </setting>
+      <setting name="GoogleClientSecret" serializeAs="String">
+        <value>ca62-0c6bRWo2YtsYhupeoOx</value>
+      </setting>
+      <setting name="FacebookClientId" serializeAs="String">
+        <value>122642971599975</value>
+      </setting>
+      <setting name="FacebookClientSecret" serializeAs="String">
+        <value>765b920fb873d52e07b0ab4a4bf805c9</value>
+      </setting>
+    </ImpeCustomers.Properties.Settings>
+  </applicationSettings>
 </configuration>
