--- a/ImpeCustomers/Web.config
+++ b/ImpeCustomers/Web.config
@@ -7,9 +7,6 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="ImpeCustomers.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ImpeCustomers-20170314083838.mdf;Initial Catalog=aspnet-ImpeCustomers-20170314083838;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -19,6 +16,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MicrosoftClientId" value="fe635da4-9827-48c4-ab74-b933318feee2" />
+    <add key="MicrosoftSecret" value="xAJOLv2mZ9xGxHJjVaTEnNR" />
+    <add key="TwitterConsumerKey" value="2SDxU9BUtQ7tmQUaIgQG3tl69" />
+    <add key="TwitterConsumerSecret" value="D1r3RVY8QOTEiV1Dq7HnNxDxkKZGBfGq2Y6yiR9hhDXdtfN1tj" />
+    <add key="FacebookAppId" value="122642971599975" />
+    <add key="FacebookAppSecret" value="765b920fb873d52e07b0ab4a4bf805c9" />
+    <add key="GoogleClientId" value="1013865157606-ajlfbeo7clmhmjjbgeub9cltd2qsl2pd.apps.googleusercontent.com" />
+    <add key="GoogleClientSecret" value="ca62-0c6bRWo2YtsYhupeoOx" />
+    <add key="LinkedInClientId" value="86mp6l8zz0dekz" />
+    <add key="LinkedInClientSecret" value="g2p8QHMQPaEaf7uB" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -96,38 +103,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <applicationSettings>
-    <ImpeCustomers.Properties.Settings>
-      <setting name="GoogleClientId" serializeAs="String">
-        <value>1013865157606-ajlfbeo7clmhmjjbgeub9cltd2qsl2pd.apps.googleusercontent.com</value>
-      </setting>
-      <setting name="GoogleClientSecret" serializeAs="String">
-        <value>ca62-0c6bRWo2YtsYhupeoOx</value>
-      </setting>
-      <setting name="FacebookClientId" serializeAs="String">
-        <value>122642971599975</value>
-      </setting>
-      <setting name="FacebookClientSecret" serializeAs="String">
-        <value>765b920fb873d52e07b0ab4a4bf805c9</value>
-      </setting>
-      <setting name="TwitterClientId" serializeAs="String">
-        <value>2SDxU9BUtQ7tmQUaIgQG3tl69</value>
-      </setting>
-      <setting name="TwitterSecret" serializeAs="String">
-        <value>D1r3RVY8QOTEiV1Dq7HnNxDxkKZGBfGq2Y6yiR9hhDXdtfN1tj</value>
-      </setting>
-      <setting name="MicrosoftClientId" serializeAs="String">
-        <value>fe635da4-9827-48c4-ab74-b933318feee2</value>
-      </setting>
-      <setting name="MicrosoftSecret" serializeAs="String">
-        <value>xAJOLv2mZ9xGxHJjVaTEnNR</value>
-      </setting>
-      <setting name="LinkedInClientId" serializeAs="String">
-        <value>86mp6l8zz0dekz</value>
-      </setting>
-      <setting name="LinkedInSecret" serializeAs="String">
-        <value>g2p8QHMQPaEaf7uB</value>
-      </setting>
-    </ImpeCustomers.Properties.Settings>
-  </applicationSettings>
 </configuration>
