--- a/ImpeCustomers/Web.config
+++ b/ImpeCustomers/Web.config
@@ -24,6 +24,7 @@
     <add key="FacebookAppSecret" value="765b920fb873d52e07b0ab4a4bf805c9" />
     <add key="GoogleClientId" value="1013865157606-ajlfbeo7clmhmjjbgeub9cltd2qsl2pd.apps.googleusercontent.com" />
     <add key="GoogleClientSecret" value="ca62-0c6bRWo2YtsYhupeoOx" />
+    <add key="GoogleCustomeSearceAPIKey" value="AIzaSyA1XW7v5I1XyIZLguTl2KlzNpuJXvhSG78" />
     <add key="LinkedInClientId" value="86mp6l8zz0dekz" />
     <add key="LinkedInClientSecret" value="g2p8QHMQPaEaf7uB" />
   </appSettings>
