--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,11 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+
+
+# Local Config 
+Web.config
+
+# Local_Data (local database)
+App_Data/
