--- a/ImpeCustomers/packages.config
+++ b/ImpeCustomers/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -37,5 +38,8 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.13.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Spring.Rest" version="1.1.1" targetFramework="net452" />
+  <package id="Spring.Social.Core" version="1.0.1" targetFramework="net452" />
+  <package id="Spring.Social.Twitter" version="2.0.0-M1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
